# pyIsoFit

./: .gitignore  .pre-commit-config.yaml  LICENCE.txt  README.md  Untitled.ipynb  pyIsofit_demo.ipynb  readme.md  requirements.txt  setup.cfg  setup.py  test.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: python_package.yml  release_me.yml
.ipynb_checkpoints/: pyIsofit_demo-checkpoint.ipynb
demo/:  fit_resultCO2.csv   fit_resultN2.csv  pyIsofit_demo.ipynb
docs/source/: conf.py  index.rst
fittingresults/: fit_result.csv  fit_resultCO2.csv  fit_resultN2.csv
pyIsoFit.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pyIsofit (OLD)/: Computational Data (EPFL) N2.csv  Source.py  alpmof_CO2.csv  alpmof_N2.csv  pyIsofit.py
pyIsofit (new Package)/: Computational Data (EPFL) CO2.csv  Computational Data (EPFL) N2.csv  DSL.py  DSL_new.py  FitPackage.ipynb  FitPackage.py  IsothermCall (ipynb of pyIsofit.py).ipynb  IsothermFitPackage (working file).ipynb  Lewatit N2 -96.csv  fit_result.csv  fit_resultCO2.csv  junkDSL.py  modelEquations.py  modelFunctions.py  modelProcedures.py  test.py  utilityFunctions.py  zeo_CO2.csv
pyIsofit (new Package)/Datasets for testing/: Lewatit CO2.csv  VOCtest.csv  enrique.csv  test4.csv  zeo_273_N2.json  zeo_CO2.csv  zeo_CO2_experimental.csv
pyIsofit Package/: Source.py  alpmof_CO2.csv  alpmof_N2.csv  isothermcall.py  pyIsofit.py  pyIsofitCall.ipynb
pyIsofit/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
pyIsofit/Datasets for testing/: CMS.csv  Computational Data (EPFL) CO2.csv  (+16 more)
tests/: test_utility_functions.py
(+79 files in other folders)
