[metadata]
name=pyIsofit
version=v0.0.1
description=Thermodynamically consistent isotherm fitting
long_description=file: README.md
project_urls=
Source=https://github.com/dominikpantak/pyIsofit
license=MIT
author= Dominik Pantak
author_email=""
classifiers=
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Physics
    Topic :: Scientific/Engineering :: Chemistry
    Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data=True
packages = find_namespace:
install_requires=
    lmfit
    click
python_requires = >=3.7
package_dir =
    =src

[options.packages.find]
where = src
exclude =
    tests


[isort]
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
line_length = 88

[options.extras_require]
dev =
    pytest
    pytest-cov
    isort
    black
    pylint
    sphinx==3.*
    sphinx-book-theme==0.*
    sphinx-autodoc-typehints==1.*
    sphinx-copybutton==0.*